style.css
*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
  color: rgb(36, 62, 99); 
}

body{
  max-width: 100vw;
  overflow-x: hidden;
}

a{
  text-decoration: none;
  display: inline;
}

.container{
  padding: 96px 0;
}

.row{
  display: flex;
  flex-direction: row;
  margin: 0 auto;
  max-width: 1280px;
}

/* Nav */
.nav__row{
  display: flex;
  justify-content: space-between;
  color: rgb(36, 62, 99)12;
}

.nav__logo{
  display: flex;
  align-items: center;
}

.nav__logo--img{
  max-width: 40px;
  max-height: 40px;
}

.nav__logo--title{
  font-weight: 1000;
  margin-left: 8px;
}

.nav__links{
  display: flex;
  align-items: center;
}

.nav__link{
  margin: 24px;
  font-size: 14px;
  font-weight: 600;
  padding-top: 4px;
  letter-spacing: 0.35px;
  border-bottom: 2px solid transparent;
  position: relative;
  transition: all 300ms;
}

.nav__link:after{
content: "";
position: absolute;
left: 0;
bottom: -6px;
height: 2px;
width: 100%;
background:#6415ff;
opacity: 0;
transition: all 300ms ease;
}

.nav__link:hover:after{
  opacity: 1;
}

.nav__link--login{
  margin-left: 48px;
  margin-right: 8px;
}

.nav__link--primary{
  color: white;
  border: none;
  border-radius: 40px;
  background-color: rgb(100, 21, 255);
  padding: 12px 32px;
}

.nav__link--primary::after{
  content: "";
  width: 0;
  height: 0;
}

.nav__link--primary:hover{
  background-color:#5613da;
}

/* Header */
.header__description{
  display: flex;
  flex-direction: column;
  width: 40%;
}

.header__description--para{
  margin: 32px 0;
}

.header__customers--title{
  margin-top: 60px;
}

.header__img--wrapper{
  width: 60%;
}

.header__img{
  width: 100%;
}

